# src/main/resources/openapi/AktivitetsplanSpec.yaml
@@ -202,17 +202,6 @@ components:
                 - SKAL_PAA_INTERVJU
                 - JOBBTILBUD
                 - AVSLAG
-    oppfolgingsperiode:
-      type: object
-      properties:
-        id:
-          type: string
-          format: uuid
-        aktiviteter:
-          type: array
-          items:
-            $ref: '#/components/schemas/aktivitet'
-          description: Liste med aktiviteter tilknyttet en oppfølgingsperiode
 
 paths:
   /internal/api/v1/aktivitet:
@@ -224,10 +213,17 @@ paths:
       parameters:
         - name: aktorId
           in: query
-          required: true
+          required: false
           schema:
             type: string
           description: AktørID til personen man ønsker å hente ut aktivitetsplanen til
+        - name: oppfolgingsperiodeId
+          in: query
+          required: false
+          schema:
+            type: string
+            format: uuid
+          description: Uuid til oppfolgingsperioden
       responses:
         '200':
           description: OK
@@ -237,6 +233,16 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/aktivitet'
+        '204':
+          description: Ingen aktiviteter for aktorId/oppfolgingsperiodeId
+        '400':
+          description: Trenger aktorId eller/og oppfolgingsperiodeId
+        '401':
+          description: Ikke logget inn
+        '403':
+          description: Ingen tilgang
+        '404':
+          description: Finner ikke aktorId/oppfolgingsperiodeId
   /internal/api/v1/aktivitet/{aktivitetId}:
     get:
       operationId: hentAktivitet
@@ -257,46 +263,3 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/aktivitet'
-  /internal/api/v1/oppfolgingsperiode/:
-    get:
-      operationId: hentOppfolgingsperioder
-      tags:
-        - Aktiviteter
-      description: ''
-      parameters:
-        - name: aktorId
-          in: query
-          required: true
-          schema:
-            type: string
-          description: AktørID til personen man ønsker å hente ut oppfolgingsperioder for
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/oppfolgingsperiode'
-  /internal/api/v1/oppfolgingsperiode/{oppfolgingsperiodeId}:
-    get:
-      operationId: hentOppfolgingsperiode
-      tags:
-        - Aktiviteter
-      description: ''
-      parameters:
-        - name: oppfolgingsperiodeId
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: Uuid til oppfolgingsperioden
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/oppfolgingsperiode'
